--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Repositório de Páginas de Luiz Manoel - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
+    <meta name="description" content="Website for deliveries of assignments each week - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
     <link rel="stylesheet" href="css/main.css">
     <title>CIT 230 Assignment Portal | Luiz Manoel Augusto Costa | BYU-Idaho</title>
   </head>
