--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -1,7 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
-      <title>Untitled Document</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Repositório de Páginas de Luiz Manoel - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
+    <link rel="stylesheet" href="css/main.css">
+    <title>CIT 230 Assignment Portal | Luiz Manoel Augusto Costa | BYU-Idaho</title>
+
+
+
       <meta name="description" content="The Quad-Cities Transporation Center has been serving the region for over 30 years.">
       <style>
           .style1 {margin: 0 auto; border: 1px solid #bbb; padding: 5px; background-color: #eee; line-height: 1.5em;}
