--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -15,7 +15,7 @@
         <h2>We have your transporation needs covered!</h2>       
     
         <ul>
-            <li><a href="#" class="current">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="products/">Products</a></li>
             <li><a href="services/">Services</a></li>
             <li><a href="locations/">Locations</a></li>
