--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -61,8 +61,8 @@
         <p>To find out more, contact Bobby at 4455.</p>
         <p>&copy; 2016 | The Quad-Cities Transporation Center  | Spokane Washington</p> 
         <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
+        <p>Subscribe to our Newsletter to get daily specials emailed to you directly!!</p>
     </footer>
     
-    <marquee>Subscribe to our Newsletter to get daily specials emailed to you directly!!</marquee>
 </body>
 </html>    
