--- a/assignments/lesson-3/fixedhtml.html
+++ b/assignments/lesson-3/fixedhtml.html
@@ -16,12 +16,12 @@
     
         <ul>
             <li><a href="/index.html">Home</a></li>
-            <li><a href="products/">Products</a></li>
-            <li><a href="services/">Services</a></li>
-            <li><a href="locations/">Locations</a></li>
-            <li><a href="about/">About Us</a></li>
-            <li><a href="contact/">Contact Us</a></li>
-            <li><a href="search/">Search</a></li>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Locations</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Search</a></li>
         </ul>
     </header>
 
