--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main>
       <h2>CIT 230 - Assignment Portal</h2>
       <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
-      <li>Lesson 04: <a href="#">Assignment Label</a></li>
+      <li>Lesson 04: <a href="/assignments/lesson-4/weathersiteplan.pdf">Weather Site Plan</a></li>
     </main>
     
     <footer>
