--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
     <main>
       <h2>CIT 230 - Assignment Portal</h2>
-      <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html">HTML Markup Validation Assignment</a></li>
-      <li>Lesson 04: <a href="/assignments/lesson-4/weathersiteplan.pdf">Weather Site Plan</a></li>
+      <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html" target="_blank">HTML Markup Validation Assignment</a></li>
+      <li>Lesson 04: <a href="/assignments/lesson-4/weathersiteplan.pdf" target="_blank">Weather Site Plan</a></li>
     </main>
     
     <footer>
