--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -12,7 +12,7 @@
   <body>
       
     <header>
-      <img src="images/logo.png" alt="The Weather Logo">
+      <img id="img-logo" src="images/logo.png" alt="The Weather Logo">
       <section class="headings">
          <h1 id="header-h1">My Weather Site</h1>
          <div class="motto">Your weather today, tomorrow and anytime you want</div>
