--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -21,7 +21,7 @@
       <nav>
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a classe="active" href="#">Preston</a></li>
+            <li class="active"><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
@@ -32,7 +32,7 @@
     </header>
     
     <main>
-      <h1>Preston Idaho</h1>
+      <h1 id="main-h1">Preston Idaho</h1>
       <img id="img-preston" src="images/Preston_Image.jpg" alt="The Preston City">
       <article>
         <h2>About this City</h2>
