--- a/assignments/lesson-4/preston-4.html
+++ b/assignments/lesson-4/preston-4.html
@@ -52,7 +52,7 @@
     </main>
     
     <footer>
-      <p>&copy;2019 My Weather Site | CIT 230 | Luiz Manoel Augusto Costa<p> 
+      <p>&copy;2019 My Weather Site | CIT230 | Luiz Manoel Costa<p> 
       <p>Insert current date</p>
     </footer>
   </body>
