--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <h2>CIT 230 - Assignment Portal</h2>
       <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html" target="_blank">HTML Markup Validation Assignment</a></li>
       <li>Lesson 04: <a href="/assignments/lesson-4/weathersiteplan.pdf" target="_blank">Weather Site Plan</a></li>
+      <li>Lesson 04: <a href="/assignments/lesson-4/preston-4.html" target="_blank">My Weather Site - Preston</a></li>
     </main>
     
     <footer>
