--- a/assignments/CIT261W05/hikes.html
+++ b/assignments/CIT261W05/hikes.html
@@ -15,7 +15,7 @@
       <ul id="hikes" class="hikeStyles"></ul>
     </main>
 
-    <script type="module" src="code/index.js"></script>
+    <script type="module" src="js/index.js"></script>
     
   </body>
 </html>
