--- a/assignments/CIT261W05/hikes.html
+++ b/assignments/CIT261W05/hikes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="CIT261 - Week 05 assignment">
     <title>Great Hikes | CIT261</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/assignments/CIT261W05/style.css">
 </head>
 
   <body>
@@ -15,7 +15,7 @@
       <ul id="hikes" class="hikeStyles"></ul>
     </main>
 
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="/assignments/CIT261W05/index.js"></script>
     
   </body>
 </html>
