--- a/assignments/CIT261W05/hikes.html
+++ b/assignments/CIT261W05/hikes.html
@@ -3,6 +3,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="CIT261 - Week 05 assignment">
     <title>Great Hikes | CIT261</title>
