--- a/assignments/CIT261W05/hikes.html
+++ b/assignments/CIT261W05/hikes.html
@@ -12,7 +12,7 @@
 
   <body>
     <main>
-      <h1>Great hikes</h1>
+      <h1>GREAT HIKES</h1>
       <ul id="hikes" class="hikeStyles"></ul>
     </main>
 
