--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html" target="_blank">HTML Markup Validation Assignment</a></li>
       <li>Lesson 04: <a href="/assignments/lesson-4/SitePlan.pdf" target="_blank">Weather Site Plan</a></li>
       <li>Lesson 04: <a href="/assignments/lesson-4/preston-4.html" target="_blank">My Weather Site - Preston</a></li>
+      <li>Lesson 05: <a href="/assignments/lesson-5/preston-5.html" target="_blank">My Weather Site - Preston</a></li>
     </main>
     
     <footer>
