--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/large-5.css">
     <link rel="stylesheet" href="css/small-5.css">
-    <script type="module" src="/assignments/lesson-5/code/code.js"></script>
+    <script src="/assignments/lesson-5/code/code.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Preston Weather Page - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
@@ -24,7 +24,7 @@
       <nav>
         <ul class="navigation">
             <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" title="Home">Home</a></li>
             <li class="active"><a href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
