--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <h2>CIT 230 - Assignment Portal</h2>
       <li>Lesson 03: <a href="/assignments/lesson-3/fixedhtml.html" target="_blank">HTML Markup Validation Assignment</a></li>
       <li>Lesson 04: <a href="/assignments/lesson-4/SitePlan.pdf" target="_blank">Weather Site Plan</a></li>
-      <li>Lesson 04: <a href="/assignments/lesson-4/preston-4.html" target="_blank">My Weather Site - Preston</a></li>
-      <li>Lesson 05: <a href="/assignments/lesson-5/preston-5.html" target="_blank">My Weather Site - Preston</a></li>
+      <li>Lesson 04: <a href="/assignments/lesson-4/preston-4.html" target="_blank">W04 - My Weather Site - Preston</a></li>
+      <li>Lesson 05: <a href="/assignments/lesson-5/preston-5.html" target="_blank">W05 - My Weather Site - Preston</a></li>
     </main>
     
     <footer>
