--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -17,7 +17,7 @@
     <header>
       <img id="img-logo" src="images/logo.png" alt="The Weather Logo">
       <section class="headings">
-         <h1 id="header-h1">My Weather Site</h1>
+         <p id="header-p">My Weather Site</p>
          <div class="motto">Your weather today, tomorrow and anytime you want</div>
      </section>
       
