--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small-5.css">
     <link rel="stylesheet" href="css/large-5.css">
@@ -22,7 +23,7 @@
      </section>
       
       <nav>
-        <ul class="navigation">
+        <ul class="navigation reponsive">
             <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
             <li><a href="#" title="Home">Home</a></li>
             <li class="active"><a href="#">Preston</a></li>
@@ -91,8 +92,17 @@
         </article>
       </div>
 
-      <div>
-        <h4>My Weather Site</h4>
+      <div class = "final-page">
+        <p>My Weather Site</p>
+        <p>30N 1st E</p>
+        <p>Preston, ID 83263</p><br>
+        <p>&#9742; 999.999.9999</p>
+        <p>&#9993; myweathersite.com</p>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-whatsapp"></a>
+        <a href="#" class="fa fa-pinterest"></a> <br>     
+        <img class="img-map" src="images/map_preston.png" alt="The Preston Map">
       </div>
 
     </main>
