--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -109,7 +109,7 @@
     
     <footer>
       <p>&copy;2019 My Weather Site | CIT230 | Luiz Manoel Costa<p> 
-      <p>Insert current date</p>
+      <p>Idaho, 2019 May 23</p>
     </footer>
   </body>
 
