--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -2,8 +2,8 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/small-5.css">
     <link rel="stylesheet" href="css/large-5.css">
     <script type="module" src="/assignments/lesson-5/code/code.js"></script>
@@ -25,11 +25,11 @@
      <nav>
       <ul class="navigation">
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-        <li><a href="#" title="Home">Home</a></li>
-        <li><a href="#" title="About">About</a></li>
-        <li><a href="#" title="Service">Service</a></li>
-        <li><a href="#" title="History">History</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#" title="Preston">Preton</a></li>
+        <li><a href="#" title="Soda Springs">Soda Springs</a></li>
+        <li><a href="#" title="Fish Haven">Fish Haven</a></li>
+        <li><a href="#" title="Storm Center">Storm Center</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
     </nav>
     
