--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -16,16 +16,16 @@
   <body>
       
     <header>
-      <h1>My Weather Site</h1>
       <img id="img-logo" src="images/logo.png" alt="The Weather Logo">
       <section class="headings">
-         <div class="motto">Your weather today, tomorrow and anytime you want</div>
+        <h1>My Weather Site</h1>
+        <div class="motto">Your weather today, tomorrow and anytime you want</div>
      </section>
       
      <nav>
       <ul class="navigation">
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
-        <li><a href="#" title="Preston">Preton</a></li>
+        <li><a href="#" class="active" title="Preston">Preton</a></li>
         <li><a href="#" title="Soda Springs">Soda Springs</a></li>
         <li><a href="#" title="Fish Haven">Fish Haven</a></li>
         <li><a href="#" title="Storm Center">Storm Center</a></li>
