--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/small-5.css">
     <link rel="stylesheet" href="css/large-5.css">
-    <script type="module" src="/assignments/lesson-5/code/code.js"></script>
+    <script src="/assignments/lesson-5/code/code.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Preston Weather Page - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
