--- a/assignments/lesson-5/preston-5.html
+++ b/assignments/lesson-5/preston-5.html
@@ -39,7 +39,7 @@
       <h1 id="main-h1">Preston Idaho</h1>
       
       <div class="w-preston-div">
-        <img id="img-preston" src="images/Preston_Image.jpg" alt="The Preston City">
+        <img src="images/Preston_Image.jpg" alt="The Preston City">
           <section class="preston-stats">
             <h3>Weather Summary</h3>
             <p> Currently: <span>Sunny</span></p>
