--- a/assignments/lesson-6/preston-6.html
+++ b/assignments/lesson-6/preston-6.html
@@ -17,10 +17,10 @@
       
     <header>
       <img id="img-logo" src="images/logo.png" alt="The Weather Logo">
-      <section class="headings">
+      <h2 class="headings">
         <p id="header-site">My Weather Site</p>
         <div class="motto">Your weather today, tomorrow and anytime you want</div>
-     </section>
+     </h2>
       
      <nav>
       <ul class="navigation">
