--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <li>Lesson 04: <a href="/assignments/lesson-4/preston-4.html" target="_blank">W04 - My Weather Site - Preston</a></li>
       <li>Lesson 05: <a href="/assignments/lesson-5/preston-5.html" target="_blank">W05 - My Weather Site - Preston</a></li>
       <li>Lesson 06: <a href="/assignments/lesson-6/preston-6.html" target="_blank">W06 - My Weather Site - Preston</a></li>
-    </main>
+      <li>Lesson 07: <a href="/assignments/lesson-7/preston-7.html" target="_blank">W07 - My Weather Site - Preston</a></li>    </main>
     
     <footer>
       <p>&copy; 2019 - Luiz Manoel Augusto Costa - Brazil<p> 
