--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -63,7 +63,7 @@
             <figure>
               <img src="images-gallery/weather3-sm.jpg" alt="Image 3">
               <figcaption>Rain with many rays is approaching. During the rain, 
-                          authorities recommend that they not be kept under trees or dangerous places.</p>
+                          authorities recommend that they not be kept under trees or dangerous places.
               </figcaption>
             </figure>
         </div>
@@ -91,7 +91,7 @@
             <figure>
                 <img src="images-gallery/weather6-sm.jpg" alt="Image 6">
                 <figcaption>Day with comfortable temperatures. 
-                            Ideal day to go to a beach. It will not rain.</p>
+                            Ideal day to go to a beach. It will not rain.
                 </figcaption>
             </figure>
         </div>
