--- a/assignments/lesson-8/tablebuild.html
+++ b/assignments/lesson-8/tablebuild.html
@@ -5,62 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Table Build - CIT230 - Web Front-end Development at Brigham Young University-Idaho.">
     <link rel="stylesheet" href="css/tabstyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet"> 
     <title>CIT 230 Assignment Portal | Luiz Manoel Augusto Costa | BYU-Idaho</title>
-  </head>
+</head>
 
 <body>
-
-<table id="mytable">
-    <thead>
-    <tr>
-        <th colspan="3">ACME Wildwest</th>
-    </tr>
-    <tr>
-        <th>Period</th>
-        <th>Sales</th> 
-        <th>Sales Goal</th>
-    </tr>
-    </thead>
+        <main>
+            <table>
+                <thead>
+                    <tr>
+                        <th colspan="3">
+                            <h1>ACME Wildwest </h1>
+                        </th>
+                    </tr>
     
-    <tfoot>
-    <tr>
-        <th colspan="3">Compiled 12.20.2020 by bRauls</th>
-    </tr>
-    </tfoot>
-
-    <tbody>
-    <tr>
-        <td>August</td>
-        <td>$3,590</td>
-        <td>$4,000</td>
-    </tr>
-    <tr>
-        <td>September</td>
-        <td>$4,420</td>
-        <td>$5,000</td>
-    </tr>
-    <tr>
-        <td>October</td>
-        <td>$4,870</td>
-        <td>$5,000</td>
-    </tr>
-    <tr>
-        <td>November</td>
-        <td>$8,610</td>
-        <td>$7,500</td>
-    </tr>
-
-    <tr>
-        <td>Black Friday</td>
-        <td colspan="2">$3,200</td>
-    </tr>
-    <tr>
-        <td>December</td>
-        <td>$6,820</td>
-        <td>$7,500</td>
-    </tr>
-    <tbody>
-</table>
-
-</body>
-</html>
+                    <tr class="colheader">
+                        <th>
+                            <h2>Period</h2>
+                        </th>
+                        <th>
+                            <h2>Sales</h2>
+                        </th>
+                        <th>
+                            <h2>Sales Data</h2>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>August</td>
+                        <td>$3,590</td>
+                        <td>$4,000</td>
+                    </tr>
+                    <tr>
+                        <td>September</td>
+                        <td>$4,420</td>
+                        <td>$5,000</td>
+                    </tr>
+                    <tr>
+                        <td>October</td>
+                        <td>$4,870</td>
+                        <td>$5,000</td>
+                    </tr>
+                    <tr>
+                        <td>November</td>
+                        <td>$8,610</td>
+                        <td class="colheader">$7,500</td>
+                    </tr>
+                    <tr>
+                        <td><em>Black Friday</em></td>
+                        <td colspan="2">$3,200</td>
+                    </tr>
+                    <tr>
+                        <td>December</td>
+                        <td>$6,820</td>
+                        <td>$7,500</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="3">Compiled 12.20.2020 by bRauls</td>
+                    </tr>
+                </tfoot>
+            </table>
+        </main>
+    </body>
+    </html>
