--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -30,7 +30,7 @@
         <li><a href="/assignments/lesson-7/preston-7.html" title="Preston">Preston</a></li>
         <li><a href="#" title="Soda Springs">Soda Springs</a></li>
         <li><a href="#" title="Fish Haven">Fish Haven</a></li>
-        <li><a href="#" title="Storm Center">Storm Center</a></li>
+        <li><a href="/assignments/lesson-8/stormcenter.html" title="Storm Center">Storm Center</a></li>
         <li><a href="#" class="active" title="Gallery">Gallery</a></li>
       </ul>
     </nav>
