--- a/assignments/lesson-8/stormcenter.html
+++ b/assignments/lesson-8/stormcenter.html
@@ -41,7 +41,7 @@
       <div>
         <form method="get" action="/assignments/lesson-8/thanks.html">
           <label class="top">Full Name* <input type="text" name="fname" pattern="[A-Za-z].{5,}" required></label>
-          <label class="top">Emai*<input type="email" name="email" placeholder="someone@gmail.com"></label>
+          <label class="top">Email<input type="email" name="email" placeholder="someone@gmail.com"></label>
           <label class="top">Phone Number*<input type="tel" name="phone" required></label>
           <label class="top">Zip Code*<input type="number" name="zip-code" required></label>
           <label class="top">Storm Date<input type="date" name="storm-date"></label>
