--- a/assignments/lesson-8/thanks.html
+++ b/assignments/lesson-8/thanks.html
@@ -37,7 +37,7 @@
         
     <main>
       <h1 id="main-h1">Storm Center</h1>
-      <h2>Thank you very much for sending us this information about the storm. Your information could save lives!</h2>
+      <br><br><h4 style="text-align: center;color:Red;padding:1rem">Thank you very much for sending us this information about the storm. Your information could save lives!</h4>
 
       <div class = "final-page">
         <p>My Weather Site</p>
