--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <li>Lesson 06: <a href="/assignments/lesson-6/preston-6.html" target="_blank">W06 - My Weather Site - Preston</a></li>
       <li>Lesson 07: <a href="/assignments/lesson-7/preston-7.html" target="_blank">W07 - My Weather Site - Preston</a></li>
       <li>Lesson 08: <a href="/assignments/lesson-8/tablebuild.html" target="_blank">W08 - Table Build</a></li>    
-      <li>Lesson 08: <a href="/assignments/lesson-8/stormcenter.html" target="_blank">W08 - Storm Center</a></li>    
+      <li>Lesson 08: <a href="/assignments/lesson-8/stormcenter.html" target="_blank">W08 - My Weather Site - Storm Center</a></li>    
+      <li>Lesson 09: <a href="/assignments/lesson-9/JSON-example.html" target="_blank">W09 - JSON Example</a></li>    
     </main>
     
     <footer>
