--- a/assignments/lesson-7/preston-7.html
+++ b/assignments/lesson-7/preston-7.html
@@ -26,6 +26,7 @@
      <nav>
       <ul class="navigation">
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
+        <li><a href="/assignments/lesson-9/index.html" title="Home">Home</a></li>
         <li><a href="#" class="active" title="Preston">Preston</a></li>
         <li><a href="#" title="Soda Springs">Soda Springs</a></li>
         <li><a href="#" title="Fish Haven">Fish Haven</a></li>
