--- a/assignments/lesson-8/thanks.html
+++ b/assignments/lesson-8/thanks.html
@@ -27,6 +27,7 @@
      <nav>
       <ul class="navigation">
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
+        <li><a href="#" title="Home">Home</a></li>
         <li><a href="/assignments/lesson-7/preston-7.html" title="Preston">Preston</a></li>
         <li><a href="#" title="Soda Springs">Soda Springs</a></li>
         <li><a href="#" title="Fish Haven">Fish Haven</a></li>
