--- a/assignments/lesson-9/JSON/JSON-example.html
+++ b/assignments/lesson-9/JSON/JSON-example.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Text JSON">
     <link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/JSON-example.css">
+    <link rel="stylesheet" href="JSON-example.css">
 
     <title>CIT 230 Assignment Portal | Luiz Manoel Augusto Costa | BYU-Idaho</title>
   </head>
@@ -18,7 +18,7 @@
     <section>
     </section>
   
-    <script src="scripts/JSON-example.js"></script>  
+    <script src="JSON-example.js"></script>  
   </body>
 
 </html>
