--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li>Lesson 08: <a href="/assignments/lesson-8/tablebuild.html" target="_blank">W08 - Table Build</a></li>    
       <li>Lesson 08: <a href="/assignments/lesson-8/stormcenter.html" target="_blank">W08 - My Weather Site - Storm Center</a></li>    
       <li>Lesson 09: <a href="/assignments/lesson-9/JSON-example.html" target="_blank">W09 - JSON Example</a></li>    
+      <li>Lesson 09: <a href="/assignments/lesson-9/index.html" target="_blank">W09 - Home Index Page</a></li>    
     </main>
     
     <footer>
