--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li>Lesson 08: <a href="/assignments/lesson-8/stormcenter.html" target="_blank">W08 - My Weather Site - Storm Center</a></li>    
       <li>Lesson 09: <a href="/assignments/lesson-9/JSON/JSON-example.html" target="_blank">W09 - JSON Example</a></li>    
       <li>Lesson 09: <a href="/assignments/lesson-9/index.html" target="_blank">W09 - Home Index Page</a></li>    
+      <li>Lesson 10: <a href="/assignments/lesson-10/preston-10.html" target="_blank">W10 - My Weather Site - Preston</a></li>    
     </main>
     
     <footer>
