--- a/assignments/weathersite/fish-haven.html
+++ b/assignments/weathersite/fish-haven.html
@@ -27,9 +27,9 @@
       <ul class="navigation">
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
         <li><a href="index.html" title="Home">Home</a></li>
-        <li><a href="preston.html" class="active" title="Preston">Preston</a></li>
+        <li><a href="preston.html" title="Preston">Preston</a></li>
         <li><a href="soda-springs.html" title="Soda Springs">Soda Springs</a></li>
-        <li><a href="fish-haven.html" title="Fish Haven">Fish Haven</a></li>
+        <li><a href="fish-haven.html" class="active" title="Fish Haven">Fish Haven</a></li>
         <li><a href="stormcenter.html" title="Storm Center">Storm Center</a></li>
         <li><a href="gallery.html" title="Gallery">Gallery</a></li>
       </ul>
