--- a/assignments/weathersite/index.html
+++ b/assignments/weathersite/index.html
@@ -28,8 +28,8 @@
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
         <li><a href="index.html" class="active" title="Home">Home</a></li>
         <li><a href="preston.html" title="Preston">Preston</a></li>
-        <li><a href="#" title="Soda Springs">Soda Springs</a></li>
-        <li><a href="#" title="Fish Haven">Fish Haven</a></li>
+        <li><a href="soda-springs.html" title="Soda Springs">Soda Springs</a></li>
+        <li><a href="fish-haven.html" title="Fish Haven">Fish Haven</a></li>
         <li><a href="stormcenter.html" title="Storm Center">Storm Center</a></li>
         <li><a href="gallery.html" title="Gallery">Gallery</a></li>
       </ul>
@@ -38,14 +38,14 @@
     <main>
       <h1 id="main-h1">HOME</h1>
 
-      <div class="grid-container">
+      <a href="preston.html"><div class="grid-container">
           <div class="grid-item">
               <figure>
                 <img src="images/preston-small.jpg" alt="Image 1">
                   <figcaption class = "fc1" id="div-preston">
                   </figcaption>
               </figure>
-          </div>
+          </div></a>
           
           <div class="grid-item">
               <figure>
@@ -82,7 +82,7 @@
       <footer>
         <p>&copy;2019 My Weather Site | CIT230 | Luiz Manoel Costa<p> 
         <p>Idaho, <span id="currentDate"></span></p>
-        <a href="https://openweathermap.org/" target="_blank">Visit the Open Weather Site!</a>
+        <p>Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</p><a href="https://openweathermap.org/" target="_blank">Visit!</a>
       </footer>
   
 
