--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li>Lesson 09: <a href="/assignments/lesson-9/index.html" target="_blank">W09 - Home Index Page</a></li>    
       <li>Lesson 10: <a href="/assignments/lesson-10/preston-10.html" target="_blank">W10 - My Weather Site - Preston</a></li>    
       <li>Lesson 11: <a href="/assignments/lesson-9/index.html" target="_blank">W11 - My Weather Site</a></li>    
+      <li>Lesson 11: <a href="/assignments/weathersite/index.html" target="_blank">Final Project - My Weather Site</a></li>    
     </main>
     
     <footer>
