--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -28,8 +28,8 @@
         <li><a href="#" title="Menu" onclick="toggleMenu()">&#9776; Menu</a></li>
         <li><a href="index.html" title="Home">Home</a></li>
         <li><a href="preston.html" title="Preston">Preston</a></li>
-        <li><a href="#" title="Soda Springs">Soda Springs</a></li>
-        <li><a href="#" title="Fish Haven">Fish Haven</a></li>
+        <li><a href="soda-springs.html" title="Soda Springs">Soda Springs</a></li>
+        <li><a href="fish-haven.html" title="Fish Haven">Fish Haven</a></li>
         <li><a href="stormcenter.html"  class="active" title="Storm Center">Storm Center</a></li>
         <li><a href="gallery.html" title="Gallery">Gallery</a></li>
       </ul>
@@ -57,7 +57,7 @@
     <footer>
       <p>&copy;2019 My Weather Site | CIT230 | Luiz Manoel Costa<p> 
       <p>Idaho, <span id="currentDate"></span></p>
-      <a href="https://openweathermap.org/" target="_blank">Visit the Open Weather Site!</a>
+      <p>Current weather data provided by OpenWeatherMap, under the CC BY-SA 4.0 license.</p><a href="https://openweathermap.org/" target="_blank">Visit!</a>
     </footer>
 
     <script src="scripts/currentdate.js"></script>
