--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -30,6 +31,7 @@
       <li>Lesson 10: <a href="/assignments/lesson-10/preston-10.html" target="_blank">W10 - My Weather Site - Preston</a></li>    
       <li>Lesson 11: <a href="/assignments/lesson-9/index.html" target="_blank">W11 - My Weather Site</a></li>    
       <li>Lesson 11: <a href="/assignments/weathersite/index.html" target="_blank">Final Project - My Weather Site</a></li>    
+      <li>Week 14: <a href="/assignments/temple-inn-suites/index.html" target="_blank">Term Website Project</a></li>    
     </main>
     
     <footer>
