--- a/assignments/temple-inn-suites/index.html
+++ b/assignments/temple-inn-suites/index.html
@@ -27,7 +27,10 @@
         </div>
           
         <div class="header">
-          <p id="header-weather">Weater</p>
+          <div id="temp-weather" class="header-weather"></div>
+          <div id="icon-weather" class="header-weather"></div>
+          <div id="desc-weather" class="header-weather"></div>
+          <div id="city-weather" class="header-weather"></div>
         </div>
     
     </header>
@@ -121,6 +124,8 @@
   
     <script src="scripts/currentdate.js"></script>
     <script src="scripts/hamburger.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/home-slide.js"></script>
+    <script src="scripts/forecast.js"></script>
+
   </body>
 </html>
