--- a/assignments/temple-inn-suites/temples.html
+++ b/assignments/temple-inn-suites/temples.html
@@ -55,7 +55,7 @@
       <div class="temple-grid-container">
           <div class="temple-grid-item">
             <picture>
-              <figcaption class = "fc1" id="div-temple1"></figcaption>
+              <figcaption class = "fc1">BRAZIL RECIFE</figcaption>
                 <source media="(min-width: 992px)" srcset="images/rc-lg.jpg">
                 <source media="(min-width: 768px)" srcset="images/rc-md.jpg">
                 <source media="(min-width: 480px)" srcset="images/rc-sm.jpg">
@@ -66,7 +66,7 @@
             
           <div class="temple-grid-item">
             <picture>
-              <figcaption class = "fc1" id="div-temple1"></figcaption>
+              <figcaption class = "fc1">BRAZIL CURITIBA</figcaption>
               <source media="(min-width: 992px)" srcset="images/ct-lg.jpg">
                 <source media="(min-width: 768px)" srcset="images/ct-md.jpg">
                 <source media="(min-width: 480px)" srcset="images/ct-sm.jpg">
@@ -77,7 +77,7 @@
 
           <div class="temple-grid-item">
             <picture>
-              <figcaption class = "fc1" id="div-temple1"></figcaption>
+              <figcaption class = "fc1">BRAZIL CAMPINAS</figcaption>
               <source media="(min-width: 992px)" srcset="images/cp-lg.jpg">
                 <source media="(min-width: 768px)" srcset="images/cp-md.jpg">
                 <source media="(min-width: 480px)" srcset="images/cp-sm.jpg">
@@ -88,7 +88,7 @@
 
           <div class="temple-grid-item">
             <picture>
-              <figcaption class = "fc1" id="div-temple1"></figcaption>
+              <figcaption class = "fc1">BRAZIL SAO PAULO</figcaption>
               <source media="(min-width: 992px)" srcset="images/sp-lg.jpg">
                 <source media="(min-width: 768px)" srcset="images/sp-md.jpg">
                 <source media="(min-width: 480px)" srcset="images/sp-sm.jpg">
