--- a/assignments/temple-inn-suites/temples.html
+++ b/assignments/temple-inn-suites/temples.html
@@ -117,7 +117,6 @@
     <script src="scripts/currentdate.js"></script>
     <script src="scripts/hamburger.js"></script>
     <script src="scripts/get-info-temples.js"></script>
-    
-  
+    <script src="scripts/forecast.js"></script>
   </body>
 </html>
