--- a/assignments/temple-inn-suites/thanks2.html
+++ b/assignments/temple-inn-suites/thanks2.html
@@ -50,10 +50,10 @@
     </nav>
         
     <main>
-      <h1>RESERVATION</h1>
+      <h1>CONTACT US</h1>
       <br>
       <h2 style="text-align: center;color:rgb(38, 18, 155);padding:1rem">
-        Thanks for requesting a reservation! We will check availability and will soon return to you with amounts and payment methods.  
+          Thanks for your message. We will reply soon.  
       </h2>
 
     </main>
