--- a/assignments/temple-inn-suites/suites.html
+++ b/assignments/temple-inn-suites/suites.html
@@ -51,8 +51,42 @@
     <main>
       <h1>SUITES</h1>
 
+      <div class="suites-grid-container">
+
+        <div class="suites-grid-item">
+          <picture>
+            <figcaption class = "fc1">Suite Single</figcaption>
+              <img src="images/suite-single.jpg" alt="Single">
+            <figcaption class = "fc2">Ideal for people who want privacy and peace in a comfortable environment. The suite is equipped with air conditioning, Smartv and king size bed.</figcaption>
+          </picture>
+        </div>
+
+        <div class="suites-grid-item">
+          <picture>
+            <figcaption class = "fc1">Suite Double</figcaption>
+              <img src="images/suite-double.jpg" alt="Double">
+            <figcaption class = "fc2">Economic option. Contemporary decor. The suite is equipped with air conditioning, Smartv and 2 single beds.</figcaption>
+          </picture>
+        </div>
+
+        <div class="suites-grid-item">
+          <picture>
+            <figcaption class = "fc1">Suite Triple</figcaption>
+              <img src="images/suite-triple.jpg" alt="Triple">
+              <figcaption class = "fc2">Economic option. Contemporary decor. The suite is equipped with air conditioning, Smartv and 3 single beds.</figcaption>
+          </picture>
+        </div>
+
+        <div class="suites-grid-item">
+          <picture>
+            <figcaption class = "fc1">Suite Family</figcaption>
+              <img src="images/suite-family.jpg" alt="Family">
+            <figcaption class = "fc2">Ideal option for family. Families with children. The space accommodates up to 6 people. The room has 1 king size bed and 4 single beds.</figcaption>
+          </picture>
+        </div>
+      </div>
     
-        </main>
+    </main>
       
     <footer>
         <div class="footer-information">
